# dia

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: engine_config.json  meetings.py  server.py  settings.json
app/static/: app.js  index.html  sign.html  style.css
dialib/: fuse.py  metrics.py  normalizer.py  seglst.py
docs/: CGN-VALUE.md  COMPARISON.md  DATASETS.md  EVALUATION.md  OPS-LLM.md  PLAN.md  PROGRESS.md  RESEARCH-verification-appendix.json  RESEARCH.md  SETUP.md  SUMMARY-EVAL.md  WEBAPP.md
eval/: latency_report.py  merge_live_offline.py  rescore.py  run_eval.py  score_nemo.py  score_voxtral.py  summary_eval.py  word_latency.py
eval/manifests/: cgn_a_dev.json  cgn_a_test.json  cgn_tel_dev.json  cgn_tel_test.json  cv22_nl_test.json  fleurs_nl_test.json  hybrid_clean_dev.json  hybrid_deg_dev.json  hybrid_fix_dev.json  ifadv_dev.json  ifadv_test.json  mls_nl_test.json
requirements/: eval.txt  vox.txt  wlk.txt
scripts/: after_bakeoff.sh  attribute_with_pyannote.py  cgn_tel_baselines.sh  cgn_to_seglst.py  download_cgn.sh  download_cv_legacy.py  download_hf_datasets.py  export_cv_train.py  export_mls_train.py  fill_cgn_license.py  final_chain.sh  https_proxy.py  ifadv_to_seglst.py  make_cert.sh  make_hybrid_ifadv.py  offline_bakeoff.sh  offline_job.py  prep_ft_data.py  prep_nemo_manifest.py  run_app.sh  run_baselines.sh  run_m_series.sh  run_sweep.py  score_lora.py  setup.sh  setup_vox_venv.sh  start_llm_standby.sh  train_lora.py  vox_bakeoff.sh
tests/: test_app_e2e.py  test_normalizer.py
